Fix spacing between elements for a cleaner look and some corrections along with pug to html

--- a/css/style.css
+++ b/css/style.css
@@ -94,8 +94,9 @@ embed {
 }
 
 p, li {
+    line-height: 150%;
     font-size: 18px;
-    margin: 10px 0;
+    margin: 10px 0 20px 0;
 }
 
 .unify {
